# libchess

./: CMakeLists.txt  LICENSE.md  README.md
benchmarks/: CMakeLists.txt  move_generator_benchmark.cc  perft.cc
include/libchess/: bitboard.h  bitboard_iterator.h  board.h  game.h  move.h  move_generator.h  piece.h  platform.h  square.h
src/: board.cc  game.cc  move_generator.cc  piece.cc
tests/: CMakeLists.txt  board_initialization_test.cc  game_test.cc  move_generator_test.cc
